--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div>
-        <canvas id="canvas" width="570" height="400">
-            your browser is shit just delete it
+        <canvas id="canvas" width="400" height="400">
+           OOPS! your browser doesn't support html5 canvas
         </canvas>
         <div class="divreset">
             <button id="reset">Reset</button>
