--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <canvas id="canvas" width="400" height="400">
+        <canvas id="canvas" height="400">
            OOPS! your browser doesn't support html5 canvas
         </canvas>
         <div class="divreset">
