Change btn color and margin

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="div2">
         <button id="up">U</button><br />
         <button id="left">L</button>
+        <button id="right">R</button><br>
         <button id="down">D</button>
-        <button id="right">R</button>
     </div>
     <script src="main.js"></script>
 </body>
